--- a/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -73,12 +73,12 @@
                             </a>
                         </li>
                         <li class="m-menu__item" routerLinkActive="m-menu__item--active">
-                            <a routerLink="/facturaciones" class="m-menu__link" routerLinkActive="m-menu__item--active">
+                            <a routerLink="/facturas" class="m-menu__link" routerLinkActive="m-menu__item--active">
                                 <i class="m-menu__link-icon fa fa-money"></i>
                                 <span class="m-menu__link-title">
                                     <span class="m-menu__link-wrap">
                                         <span class="m-menu__link-text">
-                                            Pagos
+                                            Facturas
                                         </span>
                                     </span>
                                 </span>
