--- a/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/entregados-datatable/entregados-datatable.component.html
@@ -21,7 +21,7 @@
             {{articulo.fechaIngreso | date: "shortDate"}}
         </td>
         <td>
-            {{articulo.warehouse}}
+            {{articulo.trackbox}}
         </td>
         <td>
             {{articulo.tracking}}
