--- a/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
+++ b/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
@@ -17,7 +17,7 @@
     </tr>
     <tr *ngFor="let facturacion of data">
         <td>
-            <span *ngIf="facturacion.fecha_notificacion"> {{ facturacion.fecha_notificacion | date: "shortDate" }}</span>
+            <span *ngIf="facturacion.fecha_notificacion"> {{ facturacion.fecha_notificacion | date: "dd/MM/y" }}</span>
         </td>
         <td>{{facturacion.costo ? facturacion.costo : 0 }}</td>
         <td>
