--- a/src/app/theme/pages/default/mi-casillero/en-transito-datatable/en-transito-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-transito-datatable/en-transito-datatable.component.html
@@ -12,7 +12,7 @@
     </tr>
     <tr *ngFor="let articulo of data">
         <td>
-            {{articulo.fecha | date: "shortDate"}}
+            {{articulo.fecha | date: "dd/MM/y"}}
         </td>
         <td>
            {{articulo.warehouse}}
@@ -71,7 +71,7 @@
             <tbody>
             <tr *ngFor="let articulo of envio">
                 <td>
-                    {{articulo.fecha_bodega | date: "shortDate"}}
+                    {{articulo.fecha_bodega | date: "dd/MM/y"}}
                 </td>
                 <td>
                     {{articulo.trackbox}}
