--- a/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -114,7 +114,7 @@
                                 <span class="m-menu__link-title">
                                     <span class="m-menu__link-wrap">
                                         <span class="m-menu__link-text">
-                                            Informar Compra
+                                            Informar Rastreo
                                         </span>
                                     </span>
                                 </span>
