--- a/src/app/shared/components/auto-complete/auto-complete.component.html
+++ b/src/app/shared/components/auto-complete/auto-complete.component.html
@@ -1,9 +1,9 @@
 <div class="auto-complete-container col-12">
 
-    <input class="form-control m-input col-12" (focus)="showDropdown()" (blur)="hideDropdown()" id="inputFilter"
-           [(ngModel)]="inputText" (keyup)="onTextChange()" type="text" style="width: 100%" [placeholder]="placeholder">
+    <input class="form-control m-input col-12" (focus)="showDropdown()" (blur)="hideDropdown()" id="inputFilter" autocomplete="off"
+           [(ngModel)]="inputText" (keyup)="onTextChange()" type="text" style="width: 100%" [placeholder]="placeholder" [disabled]="disabled">
     <div class="auto-complete-dropdown" *ngIf="showing" >
-        <a *ngFor="let item of itemsShowing" (click)="selectItem(item)">{{item[textField]}}</a>
+        <a *ngFor="let item of itemsShowing" (click)="selectItem(item)">{{item[textField]}} {{item[textField1]}} {{item[textField2]}}</a>
     </div>
 </div>
 
