--- a/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
+++ b/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
@@ -2,7 +2,7 @@
     <thead>
     <tr>
         <th>Fecha</th>
-        <th>Valor Total</th>
+        <th>Valor Total(USD)</th>
         <th>Arancel</th>
         <th>Tarifario</th>
 
