--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -304,8 +304,8 @@
                 <div class="row" style="margin: 5px">
                     <h3>Se embarcarán estos artículos</h3>
                 </div>
-                <div class="table-responsive" style="width: 740px; overflow: auto;">
-                <table class="table table-responsive table-bordered ">
+                <div class="table-responsive">
+                <table class="table table-bordered table-responsive m-table m-table--head-bg-brand">
                     <thead>
                     <tr>
                         <th>
