--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -32,7 +32,7 @@
                 <span></span>
             </label>
             <i class="fa fa-dropbox" style="font-size: 10px" *ngIf="articulo.consolidado">{{articulo.codigoConsolidado}}</i>
-            <i class="fa fa-plane" style="font-size: 10px" *ngIf="articulo.enviar"></i>
+            <a style="cursor: pointer;"  *ngIf="articulo.enviar" title="Instrucciones de Embarque"  (click)="modalEmbarque(embarqueModal,articulo )"> <i class="fa fa-plane" style="font-size: 10px"></i></a>
            
         </td>
         <td>
@@ -137,3 +137,141 @@
 </ng-template>
 <!--end::Modal-->  <!--begin::Modal-->
 
+
+<!--begin::View  Modal-->
+<ng-template #embarqueModal let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title">Instrucciones de Embarque</h4>
+        <button type="button" class="close" aria-label="Close" (click)="close()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="m-portlet__head-caption">
+            
+            <div class="m-list-settings">
+                <div *ngIf="datoEmbarque" class="m-list-settings__group">
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            WHBOX
+                        </span>
+                        <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.warehouse">
+                          <i class="fa fa-warning" ></i>
+                         </span>
+                         <span class="m-list-settings__item-control" *ngIf="datoEmbarque.warehouse">
+                            {{ datoEmbarque.warehouse }}
+                           </span>
+                    </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Trackbox
+                        </span>
+                        <span class="m-list-settings__item-control">
+                          {{ datoEmbarque.trackbox }}
+                         </span>
+                    </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Descripción
+                        </span>
+                        <span class="m-list-settings__item-control">
+                          {{ datoEmbarque.descripcion }}
+                         </span>
+                    </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Consignatario Embarque
+                        </span>
+                        <span class="m-list-settings__item-control" *ngIf="datoEmbarque.usuariocodigoImporter"
+                        >
+                        {{ datoEmbarque.usuariocodigoImporter }} {{ datoEmbarque.usuarionombreImporter}} {{datoEmbarque.usuarioapellidoImporter}}
+                   </span>
+                   <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuariocodigoImporter && datoEmbarque.extranombreImporter"
+                   >
+                   {{ datoEmbarque.extranombreImporter }} {{datoEmbarque.extraapellidoImporter}}
+                  </span>
+                
+                  <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuariocodigoImporter && !datoEmbarque.extranombreImporter &&
+                  datoEmbarque.usuario"
+                        >
+                        {{datoEmbarque.usuario.codigo}} {{ datoEmbarque.usuario.nombre }} {{datoEmbarque.usuario.apellido}}
+                   </span>
+                   <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuariocodigoImporter && !datoEmbarque.extranombreImporter &&
+                    datoEmbarque.extra && !datoEmbarque.usuario"
+                   >
+                   {{datoEmbarque.extra.usuario?.codigo}} {{ datoEmbarque.extra.usuario?.nombre }} {{datoEmbarque.extra.usuario?.apellido}} <br/> ({{datoEmbarque.extra.usuario?.codigo}} {{ datoEmbarque.extra.usuario?.nombre }} {{datoEmbarque.extra.usuario?.apellido}} <br/> ({{ datoEmbarque.extra.nombre }} {{resourceData.extra.apellidos}})
+              </span>
+             
+                    </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Remitente Embarque
+                        </span>
+                        <span class="m-list-settings__item-control " *ngIf="datoEmbarque.usuarioidRemitente"
+                              >
+                              {{datoEmbarque.usuariocodigoRemitente}} {{ datoEmbarque.usuarionombreRemitente }} {{datoEmbarque.usuarioapellidoRemitente}}
+                         </span>
+                         <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuarioidRemitente && datoEmbarque.extranombreRemitente"
+                         >
+                         {{ datoEmbarque.extranombreRemitente }} {{datoEmbarque.extraapellidoRemitente}})
+                        </span>
+                        <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuarioidRemitente && !datoEmbarque.extranombreRemitente && datoEmbarque.tiendaEmbarque "
+                       >
+                         {{ datoEmbarque.tiendaEmbarque }}
+                       </span>
+                        <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuarioidRemitente && !datoEmbarque.extranombreRemitente &&
+                        !datoEmbarque.tiendaEmbarque && datoEmbarque.usuarioidCarrier"
+                              >
+                              {{datoEmbarque.usuariocodigoCarrier}} {{ datoEmbarque.usuarionombreCarrier }} {{datoEmbarque.usuarioapellidoCarrier}}
+                         </span>
+                         <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuarioidRemitente && !datoEmbarque.extranombreRemitente &&
+                         !datoEmbarque.tiendaEmbarque && !datoEmbarque.usuarioidCarrier && datoEmbarque.extranombreCarrier"
+                         >
+                         {{ datoEmbarque.extranombreCarrier }} {{resourceData.extraapellidoCarrier}}
+                    </span>
+                    <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuarioidRemitente && !datoEmbarque.extranombreRemitente &&
+                    !datoEmbarque.tiendaEmbarque && !datoEmbarque.extranombreCarrier && !datoEmbarque.usuarioidCarrier"
+                    >
+                      {{ datoEmbarque.tienda }}
+                     </span>
+                    </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Peso(Lb)
+                        </span>
+                        <span class="m-list-settings__item-control">
+                          {{ datoEmbarque.peso | number:'1.2-2' }}
+                         </span>
+                    </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Volumen(Vlb)
+                        </span>
+                        <span class="m-list-settings__item-control">
+                          {{ datoEmbarque.volumen | number:'1.2-2' }}
+                         </span>
+                    </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Costo(USD)
+                        </span>
+                        <span class="m-list-settings__item-control">
+                          {{ datoEmbarque.precio }}
+                         </span>
+                    </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Piezas
+                        </span>
+                        <span class="m-list-settings__item-control">
+                          {{ datoEmbarque.piezas }}
+                         </span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</ng-template>
+<!--end::Modal-->
