--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -137,6 +137,7 @@
                             *ngIf="embarcados && embarcadosSeleccionadas"
                             [data]="embarcados"
                             (ver)="verImagenes($event, imagenesModal)"
+                            (filtersChange)="onEmbarcadosFiltersChange($event)"
                             [totalItems]="totalEmbarcados"
                             [filters]="embarcadosFilters"
                             [url]="urlfactura"
