--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -150,37 +150,21 @@
                     </div>
                     <div class="m-list-settings__item">
                         <span class="m-list-settings__item-label">
+                            Código Consolidado
+                        </span>
+                        <span class="m-list-settings__item-control">
+                          {{ datoEmbarque.codigo_consolidado ? datoEmbarque.codigo_consolidado : '-' }}
+                         </span>
+                    </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
                             Descripción
                         </span>
                         <span class="m-list-settings__item-control">
                           {{ datoEmbarque.descripcion }}
                          </span>
                     </div>
-                    <div class="m-list-settings__item">
-                        <span class="m-list-settings__item-label">
-                            Consignatario Embarque
-                        </span>
-                        <span class="m-list-settings__item-control" *ngIf="datoEmbarque.usuariocodigoImporter"
-                        >
-                        {{ datoEmbarque.usuariocodigoImporter }} {{ datoEmbarque.usuarionombreImporter}} {{datoEmbarque.usuarioapellidoImporter}}
-                   </span>
-                   <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuariocodigoImporter && datoEmbarque.extranombreImporter"
-                   >
-                   {{ datoEmbarque.extranombreImporter }} {{datoEmbarque.extraapellidoImporter}}
-                  </span>
-                
-                  <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuariocodigoImporter && !datoEmbarque.extranombreImporter &&
-                  datoEmbarque.usuario"
-                        >
-                        {{datoEmbarque.usuario.codigo}} {{ datoEmbarque.usuario.nombre }} {{datoEmbarque.usuario.apellido}}
-                   </span>
-                   <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuariocodigoImporter && !datoEmbarque.extranombreImporter &&
-                    datoEmbarque.extra && !datoEmbarque.usuario"
-                   >
-                   {{datoEmbarque.extra.usuario?.codigo}} {{ datoEmbarque.extra.usuario?.nombre }} {{datoEmbarque.extra.usuario?.apellido}} <br/> ({{datoEmbarque.extra.usuario?.codigo}} {{ datoEmbarque.extra.usuario?.nombre }} {{datoEmbarque.extra.usuario?.apellido}} <br/> ({{ datoEmbarque.extra.nombre }} {{resourceData.extra.apellidos}})
-              </span>
-             
-                    </div>
+                  
                     <div class="m-list-settings__item">
                         <span class="m-list-settings__item-label">
                             Remitente Embarque
@@ -212,6 +196,31 @@
                     >
                       {{ datoEmbarque.tienda }}
                      </span>
+                    </div>
+                    <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Consignatario Embarque
+                        </span>
+                        <span class="m-list-settings__item-control" *ngIf="datoEmbarque.usuariocodigoImporter"
+                        >
+                        {{ datoEmbarque.usuariocodigoImporter }} {{ datoEmbarque.usuarionombreImporter}} {{datoEmbarque.usuarioapellidoImporter}}
+                   </span>
+                   <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuariocodigoImporter && datoEmbarque.extranombreImporter"
+                   >
+                   {{ datoEmbarque.extranombreImporter }} {{datoEmbarque.extraapellidoImporter}}
+                  </span>
+                
+                  <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuariocodigoImporter && !datoEmbarque.extranombreImporter &&
+                  datoEmbarque.usuario"
+                        >
+                        {{datoEmbarque.usuario.codigo}} {{ datoEmbarque.usuario.nombre }} {{datoEmbarque.usuario.apellido}}
+                   </span>
+                   <span class="m-list-settings__item-control" *ngIf="!datoEmbarque.usuariocodigoImporter && !datoEmbarque.extranombreImporter &&
+                    datoEmbarque.extra && !datoEmbarque.usuario"
+                   >
+                   {{datoEmbarque.extra.usuario?.codigo}} {{ datoEmbarque.extra.usuario?.nombre }} {{datoEmbarque.extra.usuario?.apellido}} <br/> ({{datoEmbarque.extra.usuario?.codigo}} {{ datoEmbarque.extra.usuario?.nombre }} {{datoEmbarque.extra.usuario?.apellido}} <br/> ({{ datoEmbarque.extra.nombre }} {{resourceData.extra.apellidos}})
+              </span>
+             
                     </div>
                     <div class="m-list-settings__item">
                         <span class="m-list-settings__item-label">
