--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -254,6 +254,14 @@
                           {{ datoEmbarque.piezas }}
                          </span>
                     </div>
+					 <div class="m-list-settings__item">
+                        <span class="m-list-settings__item-label">
+                            Categoría o partida arancelaria
+                        </span>
+                        <span class="m-list-settings__item-control">
+                          {{ datoEmbarque.nota }}
+                         </span>
+                    </div>
                 </div>
             </div>
 
